RESOLVED FIXED300344
Fix issue with removing shared processes from process cache
https://bugs.webkit.org/show_bug.cgi?id=300344
Summary Fix issue with removing shared processes from process cache
Ben Nham
Reported 2025-10-07 14:18:29 PDT
When a shared process (see 300964@main) is removed from the process cache, it causes a crash.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-07 14:18:37 PDT
Ben Nham
Comment 2 2025-10-07 14:20:33 PDT
EWS
Comment 3 2025-10-07 16:23:21 PDT
Committed 301173@main (f27ec28df1b8): <https://commits.webkit.org/301173@main> Reviewed commits have been landed. Closing PR #51965 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.