Fix issue with removing shared processes from process cache https://bugs.webkit.org/show_bug.cgi?id=300344 rdar://162146236

Reviewed by Ryosuke Niwa.

When a shared process (see 300964@main) is removed from the process cache, it causes a crash. Fix
this and add a test.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm
* Source/WebKit/UIProcess/API/Cocoa/WKProcessPool.mm:
(-[WKProcessPool _setCachedProcessLifetimeForTesting:]):
* Source/WebKit/UIProcess/API/Cocoa/WKProcessPoolPrivate.h:
* Source/WebKit/UIProcess/WebProcessCache.cpp:
(WebKit::WebProcessCache::setCachedProcessLifetimeForTesting):
(WebKit::WebProcessCache::WebProcessCache):
(WebKit::WebProcessCache::addProcessIfPossible):
(WebKit::WebProcessCache::clear):
(WebKit::WebProcessCache::clearAllProcessesForSession):
(WebKit::WebProcessCache::setApplicationIsActive):
(WebKit::WebProcessCache::removeProcess):
(WebKit::WebProcessCache::CachedProcess::create):
(WebKit::WebProcessCache::CachedProcess::CachedProcess):
* Source/WebKit/UIProcess/WebProcessCache.h:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::(SiteIsolation, SharedProcessWebProcessCacheCanEvict)):

Canonical link: https://commits.webkit.org/301173@main